--- a/spotify-data-analysis.ipynb
+++ b/spotify-data-analysis.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "ace1973d",
    "metadata": {
     "execution": {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "id": "dc802f07",
    "metadata": {
     "execution": {
@@ -81,44 +81,7 @@
      "start_time": "2023-01-09T10:47:07.676588",
      "status": "completed"
     },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_10908\\1631192772.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Now, let us pull the data using read_csv pandas function\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mtracks_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"http://localhost:8889/edit/Desktop/Analyzing%20User%20Behavior%20and%20Music%20Trends/tracks.csv\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "# Now, let us pull the data using read_csv pandas function\n",
-    "tracks_df = pd.read_csv(\"http://localhost:8889/edit/Desktop/Analyzing%20User%20Behavior%20and%20Music%20Trends/tracks.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "4303f665",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-01-09T10:47:12.095328Z",
-     "iopub.status.busy": "2023-01-09T10:47:12.094635Z",
-     "iopub.status.idle": "2023-01-09T10:47:12.126882Z",
-     "shell.execute_reply": "2023-01-09T10:47:12.125627Z"
-    },
-    "papermill": {
-     "duration": 0.045462,
-     "end_time": "2023-01-09T10:47:12.129862",
-     "exception": false,
-     "start_time": "2023-01-09T10:47:12.084400",
-     "status": "completed"
-    },
+    "scrolled": true,
     "tags": []
    },
    "outputs": [
@@ -315,12 +278,14 @@
        "4         0.989            0.1300     0.311    0.196  103.220               4  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Now, let us pull the data using read_csv pandas function\n",
+    "tracks_df=pd.read_csv(\"C:/Users/subhojit das/Desktop/Spotify-EDA/tracks.csv\").head()\n",
     "# View the head of tracks_df\n",
     "tracks_df.head()"
    ]
